<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background">
    
      <EditText 
        android:id="@+id/usa_et_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usa_name"
        android:layout_alignParentTop="true"
        android:layout_margin="20sp"
        android:inputType="textPersonName"
         android:padding="10sp"
        android:background="@drawable/text_bg_view"
        android:textColor="#000"
        />
    <EditText 
        android:id="@+id/usa_et_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usa_email"
        android:layout_below="@id/usa_et_name"
        android:layout_margin="20sp"
        android:inputType="textEmailAddress"
         android:padding="10sp"
        android:background="@drawable/text_bg_view"
        android:textColor="#000"
        />
    <EditText 
        android:id="@+id/usa_et_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usa_phone"
        android:layout_below="@id/usa_et_email"
        android:layout_margin="20sp"
        android:inputType="phone"
         android:padding="10sp"
        android:background="@drawable/text_bg_view"
        android:textColor="#000"
        />
     <EditText 
        android:id="@+id/usa_et_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usa_city"
        android:layout_below="@id/usa_et_phone"
        android:layout_margin="20sp"
        android:inputType="text"
         android:padding="10sp"
        android:background="@drawable/text_bg_view"
        android:textColor="#000"
        />
    <Button 
        android:id="@+id/usa_btn_action"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/usa_action"
        android:layout_margin="20sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/grid_press"
        />

</RelativeLayout>
